--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
                     d="M14.594,13.994l-1.66,1.66c-0.577-0.109-1.734-0.471-2.926-1.66c-1.193-1.193-1.553-2.354-1.661-2.926l1.661-1.66 l0.701-0.701L5.295,3.293L4.594,3.994l-1,1C3.42,5.168,3.316,5.398,3.303,5.643c-0.015,0.25-0.302,6.172,4.291,10.766 C11.6,20.414,16.618,20.707,18,20.707c0.202,0,0.326-0.006,0.358-0.008c0.245-0.014,0.476-0.117,0.649-0.291l1-1l0.697-0.697 l-5.414-5.414L14.594,13.994z" />
                 </svg>
 
-                <span class="ml-2">+1 562-789-1935</span>
+                <span class="ml-2">+593 99 259 3659 </span>
               </div>
             </li>
           </ul>
@@ -170,7 +170,7 @@
       <div class="flex flex-wrap items-center justify-between py-6">
         <div class="w-1/2 md:w-auto">
           <a href="index.html" class="text-white font-bold text-2xl">
-            DentalPro
+            Clínica Saludent
           </a>
         </div>
 
@@ -186,19 +186,15 @@
           <nav
             class="w-full bg-white md:bg-transparent rounded shadow-lg px-6 py-4 mt-4 text-center md:p-0 md:mt-0 md:shadow-none">
             <ul class="md:flex items-center">
-              <li><a class="py-2 inline-block md:text-white md:hidden lg:block font-semibold" href="#">About Us</a></li>
+              <li><a class="py-2 inline-block md:text-white md:hidden lg:block font-semibold" href="#inicio">Inicio</a></li>
               <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold"
-                  href="#">Treatments</a></li>
+                  href="#sobre-mi">Sobre mí</a></li>
               <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold"
-                  href="#">Testimonials</a></li>
-              <li class="md:ml-4 md:hidden lg:block"><a class="py-2 inline-block md:text-white md:px-2 font-semibold"
-                  href="#">Blog</a></li>
-              <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold" href="#">Contact
-                  Us</a></li>
+                  href="#tratamientos">Tratamientos</a></li>
+              <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold" href="#contacto">Contacto</a></li>
               <li class="md:ml-6 mt-3 md:mt-0">
                 <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-                  href="book-appointment.html">Book
-                  Appointment</a>
+                  href="book-appointment.html">Agendar Cita</a>
               </li>
             </ul>
           </nav>
@@ -208,23 +204,18 @@
     <!-- end header -->
 
     <!-- start hero -->
-    <div class="bg-gray-100">
+    <div class="bg-gray-100" id="inicio" >
       <section class="cover bg-blue-teal-gradient relative bg-blue-600 px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 overflow-hidden py-48 flex
       items-center min-h-screen">
         <div class="h-full absolute top-0 left-0 z-0">
-          <img src="images/cover-bg.jpg" alt="" class="w-full h-full object-cover opacity-20">
+          <img src="images\pixelcut-export.jpg" alt="" class="w-full h-full object-cover opacity-30">
         </div>
 
         <div class="lg:w-3/4 xl:w-2/4 relative z-10 h-100 lg:mt-16">
           <div>
-            <h1 class="text-white text-4xl md:text-5xl xl:text-6xl font-bold leading-tight">A better life starts with a
-              beautiful
-              smile.</h1>
-            <p class="text-blue-100 text-xl md:text-2xl leading-snug mt-4">Welcome to the Dentist Office of Dr. Thomas
-              Dooley,
-              where
-              trust
-              and comfort are priorities.</p>
+            <h1 class="text-white text-4xl md:text-5xl xl:text-6xl font-bold leading-tight">Transforma tu sonrisa, transforma tu mundo.</h1>
+            <p class="text-blue-100 text-xl md:text-2xl leading-snug mt-4">
+              Con la Dra. Martha Castro, disfrute de atención personalizada en un ambiente cómodo y seguro, con resultados de calidad garantizada.</p>
             <a href="#" class="px-8 py-4 bg-teal-500 text-white rounded inline-block mt-8 font-semibold">Book
               Appointment</a>
           </div>
@@ -234,7 +225,7 @@
     <!-- end hero -->
 
     <!-- start about -->
-    <section class="relative px-4 py-16 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 lg:py-32">
+    <section class="relative px-4 py-16 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 lg:py-32" id="sobre-mi">
       <div class="flex flex-col lg:flex-row lg:-mx-8">
         <div class="w-full lg:w-1/2 lg:px-8">
           <h2 class="text-3xl leading-tight font-bold mt-4">Welcome to the Dentist Office of Dr. Thomas Dooley</h2>
@@ -271,7 +262,8 @@
           </div>
         </div>
       </div>
-
+    </section>
+    <section class="relative px-4 py-16 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 lg:py-32" id="tratamientos">
       <div class="md:flex md:flex-wrap mt-24 text-center md:-mx-4">
         <div class="md:w-1/2 md:px-4 lg:w-1/4">
           <div class="bg-white rounded-lg border border-gray-300 p-8">
@@ -316,86 +308,10 @@
     </section>
     <!-- end about -->
 
-    <!-- start testimonials -->
-    <section class="relative bg-gray-100 px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-16 lg:py-32">
-      <div class="flex flex-col lg:flex-row lg:-mx-8">
-        <div class="w-full lg:w-1/2 lg:px-8">
-          <h2 class="text-3xl leading-tight font-bold mt-4">Why choose the Mesothelioma Center?</h2>
-          <p class="mt-2 leading-relaxed">Aenean ut tellus tellus. Suspendisse potenti. Nullam tincidunt lacus tellus,
-            sed aliquam est vehicula a. Pellentesque consectetur condimentum nulla, eleifend condimentum purus vehicula
-            in. Donec convallis sollicitudin facilisis. Integer nisl ligula, accumsan non tincidunt ac, imperdiet in
-            enim. Donec efficitur ullamcorper metus, eu venenatis nunc. Nam eget neque tempus, mollis sem a, faucibus
-            mi.</p>
-        </div>
-
-        <div class="w-full md:max-w-md md:mx-auto lg:w-1/2 lg:px-8 mt-12 mt:md-0">
-          <div class="bg-gray-400 w-full h-72 rounded-lg"></div>
-
-          <p class="italic text-sm mt-2 text-center">Aenean ante nisi, gravida non mattis semper.</p>
-        </div>
-      </div>
-    </section>
-    <!-- end testimonials -->
-
-    <!-- start blog -->
-    <section class="relative bg-white px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-32">
-      <div class="">
-        <h2 class="text-3xl leading-tight font-bold">Health Blog</h2>
-        <p class="text-gray-600 mt-2 md:max-w-lg">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-          turpis egestas.</p>
-
-        <a href="#" title="" class="inline-block text-teal-500 font-semibold mt-6 mt:md-0">View All Posts</a>
-      </div>
-
-      <div class="md:flex mt-12 md:-mx-4">
-        <div class="md:px-4 md:w-1/2 xl:w-1/4">
-          <div class="bg-white rounded border border-gray-300">
-            <div class="w-full h-48 overflow-hidden bg-gray-300"></div>
-            <div class="p-4">
-              <div class="flex items-center text-sm">
-                <span class="text-teal-500 font-semibold">Business</span>
-                <span class="ml-4 text-gray-600">29 Nov, 2019</span>
-              </div>
-              <p class="text-lg font-semibold leading-tight mt-4">Card Title</p>
-              <p class="text-gray-600 mt-1">This card has supporting text below as a natural lead-in to additional content.
-              </p>
-              <div class="flex items-center mt-4">
-                <div class="w-8 h-8 rounded-full overflow-hidden bg-gray-300"></div>
-                <div class="ml-4">
-                  <p class="text-gray-600">By <span class="text-gray-900 font-semibold">Abby Sims</span></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="md:px-4 md:w-1/2 xl:w-1/4 mt-4 md:mt-0">
-          <div class="bg-white rounded border border-gray-300 ">
-            <div class="w-full h-48 overflow-hidden bg-gray-300"></div>
-            <div class="p-4">
-              <div class="flex items-center text-sm">
-                <span class="text-teal-500 font-semibold">Business</span>
-                <span class="ml-4 text-gray-600">29 Nov, 2019</span>
-              </div>
-              <p class="text-lg font-semibold leading-tight mt-4">Card Title</p>
-              <p class="text-gray-600 mt-1">This card has supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <div class="flex items-center mt-4">
-                <div class="w-8 h-8 rounded-full overflow-hidden bg-gray-300"></div>
-                <div class="ml-4">
-                  <p class="text-gray-600">By <span class="text-gray-900 font-semibold">Abby Sims</span></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end blog -->
+    
 
     <!-- start cta -->
-    <section
+    <section id="contacto"
       class="relative bg-blue-teal-gradient px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 text-center md:text-left">
       <div class="md:flex md:items-center md:justify-center">
         <h2 class="text-xl font-bold text-white">Get in touch with us today! <br class="block md:hidden">Call us on: +1
