--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
               <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold" href="#contacto">Contacto</a></li>
               <li class="md:ml-6 mt-3 md:mt-0">
                 <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-                  href="book-appointment.html">Agendar Cita</a>
+                  href="#formulario">Agendar Cita</a>
               </li>
             </ul>
           </nav>
@@ -367,7 +367,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
       </div>
     </section>
     <!-- end cta -->
-
+    <script src="/public/file.js"></script>
     <!-- start footer -->
     <footer class="relative bg-gray-900 text-white px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 lg:py-24">
       <div class="flex flex-col md:flex-row">
