--- a/public/index.html
+++ b/public/index.html
@@ -156,15 +156,6 @@
               </a>
             </li>
 
-            <li class="ml-6">
-              <a href="#" target="_blank" title="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
-                  <path
-                    d="M21.593,7.203c-0.23-0.858-0.905-1.535-1.762-1.766C18.265,5.007,12,5,12,5S5.736,4.993,4.169,5.404	c-0.84,0.229-1.534,0.921-1.766,1.778c-0.413,1.566-0.417,4.814-0.417,4.814s-0.004,3.264,0.406,4.814	c0.23,0.857,0.905,1.534,1.763,1.765c1.582,0.43,7.83,0.437,7.83,0.437s6.265,0.007,7.831-0.403c0.856-0.23,1.534-0.906,1.767-1.763	C21.997,15.281,22,12.034,22,12.034S22.02,8.769,21.593,7.203z M9.996,15.005l0.005-6l5.207,3.005L9.996,15.005z">
-                  </path>
-                </svg>
-              </a>
-            </li>
           </ul>
         </div>
       </div>
@@ -218,8 +209,7 @@
             <h1 class="text-white text-4xl md:text-5xl xl:text-6xl font-bold leading-tight">Transforma tu sonrisa, transforma tu mundo.</h1>
             <p class="text-blue-100 text-xl md:text-2xl leading-snug mt-4">
               Con la Dra. Martha Castro, disfrute de atención personalizada en un ambiente cómodo y seguro, con resultados de calidad garantizada.</p>
-            <a href="#" class="px-8 py-4 bg-teal-500 text-white rounded inline-block mt-8 font-semibold">Book
-              Appointment</a>
+            <a href="#formulario" class="px-8 py-4 bg-teal-500 text-white rounded inline-block mt-8 font-semibold">Agenda tu cita ahora</a>
           </div>
         </div>
       </section>
@@ -273,80 +263,89 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
     </section>
     <!-- end about -->
     <!--start tratamientos-->
-    <div class="text-center mb-8">
-      <h2 class="text-2xl md:text-3xl font-bold text-gray-800" id="tratamientos">Nuestros Servicios Dentales</h2>
+    <div class="text-center mb-8" id="tratamientos">
+       <div class="mx-auto w-36 border-t-4 border-teal-500 rounded-full mb-4"></div>
+      <h2 class="text-2xl md:text-3xl font-bold text-gray-800">Nuestros Servicios Dentales</h2>
       <p class="text-gray-600 mt-2">Elige el tratamiento que mejor se adapte a tus necesidades</p>
     </div>
     <section class="flex flex-wrap justify-center items-start gap-6 p-6 bg-white" >
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-      <div class="text-4xl mb-2">🦷</div>
+      <img src="images\limpieza.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Limpieza Dental</h3>
         <p class="text-gray-600 mb-2">Dientes más limpios<br>y saludables</p>
         <p class="text-gray-800 font-semibold mb-4">Desde <span class="text-teal-600 font-bold">$25</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+         <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="limpieza">Reservar</button></a>
         <p class="text-sm text-gray-500">Duración: 30 minutos</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <div class="text-4xl mb-2">✨</div>
+        <img src="images\blanqueamiento.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Blanqueamiento</h3>
         <p class="text-gray-600 mb-2">Mejorá el color y<br>la estética</p>
         <p class="text-gray-800 font-semibold mb-4">Desde <span class="text-teal-600 font-bold">$80</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="blanqueamiento">Reservar</button></a>
         <p class="text-sm text-gray-500">Duración: 40 minutos</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <div class="text-4xl mb-2">🦷🪛</div>
+        <img src="images\calce.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Calces</h3>
         <p class="text-gray-600 mb-2">Restauración dental para prevenir complicaciones</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="calces">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <img src="images\oral-surgery.svg" alt="" class="h-14 mx-auto">
-        <h3 class="text-lg font-semibold mb-1">Protesis Acrilicas</h3>
+        <img src="images\protesis.png" alt="" class="h-14 mx-auto">
+        <h3 class="text-lg font-semibold mb-1">Prótesis Acrilicas</h3>
         <p class="text-gray-600 mb-2">Reemplazo dental con prótesis removibles</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="protesis">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <img src="images\teeth-whitening.svg" alt="" class="h-14 mx-auto">
+        <img src="images\corona.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Coronas</h3>
         <p class="text-gray-600 mb-2">Restauraciones dentales para dientes dañados</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="corona">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <img src="images\painless-dentistry.svg" alt="" class="h-14 mx-auto">
+        <img src="images\extraccionS.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Extracción simple</h3>
         <p class="text-gray-600 mb-2">Retiro de piezas dentales sin complicación.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="extraccion-simple">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <img src="images\painless-dentistry.svg" alt="" class="h-14 mx-auto">
+        <img src="images\extraccionM.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Extracción Tercer Molar</h3>
         <p class="text-gray-600 mb-2">Remoción de muelas del juicio con evaluación previa.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="extraccion-molar">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
 
       <div class="border rounded-xl p-6 shadow-sm w-full md:w-64 text-center">
-        <img src="images\periodontics.svg" alt="" class="h-14 mx-auto">
+        <img src="images\tratamiento.png" alt="" class="h-14 mx-auto">
         <h3 class="text-lg font-semibold mb-1">Tratamiento de conducto</h3>
         <p class="text-gray-600 mb-2">Tratamiento endodóntico para salvar piezas dentales.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3">Reservar</button>
+        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+                  href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="tratamiento">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
       
@@ -383,20 +382,21 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
           <option value="">Selecciona un tratamiento</option>
           <option value="limpieza">Limpieza Dental</option>
           <option value="blanqueamiento">Blanqueamiento Dental</option>
-          <option value="empastes">Empastes Estéticos</option>
           <option value="coronas">Coronas de Porcelana</option>
           <option value="implantes">Implantes Dentales</option>
-          <option value="ortodoncia">Ortodoncia</option>
-          <option value="endodoncia">Endodoncia</option>
-          <option value="extraccion">Extracción Simple</option>
+          <option value="extraccion-simple">Extracción Simple</option>
           <option value="protesis">Prótesis Dentales</option>
+          <option value="extraccion-molar">Extraccíon Terceros Molares</option>
           <option value="consulta">Consulta General</option>
+          <option value="tratamiento">Tratamiento de Conducto</option>
+          <option value="calces">Calces Dentales</option>
         </select>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div>
           <label for="date" class="block text-sm font-medium text-gray-700">Fecha preferida</label>
           <input type="date" id="date" name="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-teal-500 focus:border-teal-500">
+           <p id="mensaje-error" class="text-red-600 text-sm mb-4 hidden">Solo puedes elegir sábados o domingos.</p>
         </div>
         <div>
           <label for="time" class="block text-sm font-medium text-gray-700">Hora preferida</label>
@@ -408,9 +408,6 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
             <option value="12:00">12:00 PM</option>
             <option value="14:00">2:00 PM</option>
             <option value="15:00">3:00 PM</option>
-            <option value="16:00">4:00 PM</option>
-            <option value="17:00">5:00 PM</option>
-            <option value="18:00">6:00 PM</option>
           </select>
         </div>
       </div>
@@ -427,11 +424,9 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
     <section id="contacto"
       class="relative bg-blue-teal-gradient px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 text-center md:text-left">
       <div class="md:flex md:items-center md:justify-center">
-        <h2 class="text-xl font-bold text-white">Get in touch with us today! <br class="block md:hidden">Call us on: +1
-          562-789-1935</h2>
+        <h2 class="text-xl font-bold text-white">¡Ponte en contacto con nosotros hoy! <br class="block md:hidden">Llámanos al: +593 99 259 3659 </h2>
         <a href="#"
-          class="px-8 py-4 bg-white text-blue-600 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0">Book
-          Appointment</a>
+          class="px-8 py-4 bg-white text-blue-600 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0">Agenda tu cita</a>
       </div>
     </section>
     <!-- end cta -->
@@ -511,7 +506,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
                   </svg>
                 </span>
                 <span class="ml-3">
-                  +1 562-789-1935
+                  +593 99 259 3659
                 </span>
               </a>
             </li>
@@ -559,15 +554,6 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
                   <path
                     d="M20.947,8.305c-0.011-0.757-0.151-1.508-0.419-2.216c-0.469-1.209-1.424-2.165-2.633-2.633 c-0.699-0.263-1.438-0.404-2.186-0.42C14.747,2.993,14.442,2.981,12,2.981s-2.755,0-3.71,0.055 c-0.747,0.016-1.486,0.157-2.185,0.42C4.896,3.924,3.94,4.88,3.472,6.089C3.209,6.788,3.067,7.527,3.053,8.274 c-0.043,0.963-0.056,1.268-0.056,3.71s0,2.754,0.056,3.71c0.015,0.748,0.156,1.486,0.419,2.187 c0.469,1.208,1.424,2.164,2.634,2.632c0.696,0.272,1.435,0.426,2.185,0.45c0.963,0.043,1.268,0.056,3.71,0.056s2.755,0,3.71-0.056 c0.747-0.015,1.486-0.156,2.186-0.419c1.209-0.469,2.164-1.425,2.633-2.633c0.263-0.7,0.404-1.438,0.419-2.187 c0.043-0.962,0.056-1.267,0.056-3.71C21.003,9.572,21.003,9.262,20.947,8.305z M11.994,16.602c-2.554,0-4.623-2.069-4.623-4.623 s2.069-4.623,4.623-4.623c2.552,0,4.623,2.069,4.623,4.623S14.546,16.602,11.994,16.602z M16.801,8.263 c-0.597,0-1.078-0.482-1.078-1.078s0.481-1.078,1.078-1.078c0.595,0,1.077,0.482,1.077,1.078S17.396,8.263,16.801,8.263z" />
                   <circle cx="11.994" cy="11.979" r="3.003" /></svg>
-              </a>
-            </li>
-
-            <li class="ml-6">
-              <a href="#" target="_blank" title="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
-                  <path
-                    d="M21.593,7.203c-0.23-0.858-0.905-1.535-1.762-1.766C18.265,5.007,12,5,12,5S5.736,4.993,4.169,5.404	c-0.84,0.229-1.534,0.921-1.766,1.778c-0.413,1.566-0.417,4.814-0.417,4.814s-0.004,3.264,0.406,4.814	c0.23,0.857,0.905,1.534,1.763,1.765c1.582,0.43,7.83,0.437,7.83,0.437s6.265,0.007,7.831-0.403c0.856-0.23,1.534-0.906,1.767-1.763	C21.997,15.281,22,12.034,22,12.034S22.02,8.769,21.593,7.203z M9.996,15.005l0.005-6l5.207,3.005L9.996,15.005z" />
-                </svg>
               </a>
             </li>
           </ul>
