--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                     d="M12,2C7.589,2,4,5.589,4,9.995C3.971,16.44,11.696,21.784,12,22c0,0,8.029-5.56,8-12C20,5.589,16.411,2,12,2z M12,14 c-2.21,0-4-1.79-4-4s1.79-4,4-4s4,1.79,4,4S14.21,14,12,14z" />
                 </svg>
 
-                <span class="ml-2">1985 Kerry Way, Whittier, CA, USA</span>
+                <span class="ml-2">Guayacanes, Guayaquil, Ecuador</span>
               </div>
             </li>
             <li class="ml-6">
@@ -187,7 +187,7 @@
               <li class="md:ml-4"><a class="py-2 inline-block md:text-white md:px-2 font-semibold" href="#contacto">Contacto</a></li>
               <li class="md:ml-6 mt-3 md:mt-0">
                 <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
-                  href="#formulario">Agendar Cita</a>
+                  href="#formulario" data-servicio="consulta" >Agendar Cita</a>
               </li>
             </ul>
           </nav>
@@ -274,7 +274,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Limpieza Dental</h3>
         <p class="text-gray-600 mb-2">Dientes más limpios<br>y saludables</p>
         <p class="text-gray-800 font-semibold mb-4">Desde <span class="text-teal-600 font-bold">$25</span></p>
-         <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+         <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="limpieza">Reservar</button></a>
         <p class="text-sm text-gray-500">Duración: 30 minutos</p>
       </div>
@@ -284,7 +284,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Blanqueamiento</h3>
         <p class="text-gray-600 mb-2">Mejorá el color y<br>la estética</p>
         <p class="text-gray-800 font-semibold mb-4">Desde <span class="text-teal-600 font-bold">$80</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="blanqueamiento">Reservar</button></a>
         <p class="text-sm text-gray-500">Duración: 40 minutos</p>
       </div>
@@ -294,7 +294,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Calces</h3>
         <p class="text-gray-600 mb-2">Restauración dental para prevenir complicaciones</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="calces">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -304,7 +304,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Prótesis Acrilicas</h3>
         <p class="text-gray-600 mb-2">Reemplazo dental con prótesis removibles</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="protesis">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -314,7 +314,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Coronas</h3>
         <p class="text-gray-600 mb-2">Restauraciones dentales para dientes dañados</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="corona">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -324,7 +324,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Extracción simple</h3>
         <p class="text-gray-600 mb-2">Retiro de piezas dentales sin complicación.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="extraccion-simple">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -334,7 +334,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Extracción Tercer Molar</h3>
         <p class="text-gray-600 mb-2">Remoción de muelas del juicio con evaluación previa.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="extraccion-molar">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -344,7 +344,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <h3 class="text-lg font-semibold mb-1">Tratamiento de conducto</h3>
         <p class="text-gray-600 mb-2">Tratamiento endodóntico para salvar piezas dentales.</p>
         <p class="text-gray-800 font-semibold mb-4">Evaluación <span class="text-teal-600 font-bold">gratis</span></p>
-        <a class="inline-block font-semibold px-4 py-2 text-white bg-blue-600 md:bg-transparent md:text-white border border-white rounded"
+        <a class="inline-block font-semibold px-4 py-2 text-white md:bg-transparent md:text-white border border-white rounded"
                   href="#formulario"><button class="bg-teal-600 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded mb-3 reservar-btn" data-servicio="tratamiento">Reservar</button></a>
         <p class="text-sm text-gray-500">Tratamiento personalizado</p>
       </div>
@@ -425,7 +425,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
       class="relative bg-blue-teal-gradient px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 text-center md:text-left">
       <div class="md:flex md:items-center md:justify-center">
         <h2 class="text-xl font-bold text-white">¡Ponte en contacto con nosotros hoy! <br class="block md:hidden">Llámanos al: +593 99 259 3659 </h2>
-        <a href="#"
+        <a href="#formulario"
           class="px-8 py-4 bg-white text-blue-600 rounded inline-block font-semibold md:ml-8 mt-4 md:mt-0">Agenda tu cita</a>
       </div>
     </section>
@@ -435,37 +435,21 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
     <footer class="relative bg-gray-900 text-white px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 lg:py-24">
       <div class="flex flex-col md:flex-row">
         <div class="w-full lg:w-2/6 lg:mx-4 lg:pr-8">
-          <h3 class="font-bold text-2xl">DentalPro</h3>
-          <p class="text-gray-400">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
-
-          <form class="flex items-center mt-6">
-            <div class="w-full">
-              <label class="block uppercase tracking-wide text-gray-600 text-xs font-bold mb-2" for="grid-last-name">
-                Subscribe for our Newsletter
-              </label>
-              <div class="relative">
-                <input
-                  class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-4 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                  type="email" placeholder="Enter Your Email Address">
-
-                <button type="submit"
-                  class="bg-teal-500 hover:bg-teal-400 text-white px-4 py-2 text-sm font-bold rounded absolute top-0 right-0 my-2 mr-2">Subscribe</button>
-              </div>
-            </div>
-          </form>
+          <h3 class="font-bold text-2xl">Clinica Saludent</h3>
+          <p class="text-gray-400">Tu salud dental es prioridad. Agenda hoy mismo tu cita con la Dra. Martha Castro.</p>
         </div>
 
         <div class="w-full lg:w-1/6 mt-8 lg:mt-0 lg:mx-4">
-          <h5 class="uppercase tracking-wider font-semibold text-gray-500">Treatments</h5>
+          <h5 class="uppercase tracking-wider font-semibold text-gray-500">Tratamientos</h5>
           <ul class="mt-4">
-            <li class="mt-2"><a href="#" title="" class="opacity-75 hover:opacity-100">General Dentistry</a></li>
-            <li class="mt-2"><a href="#" title="" class="opacity-75 hover:opacity-100">Cosmetic Dentistry</a></li>
-            <li class="mt-2"><a href="#" title="" class="opacity-75 hover:opacity-100">Oral Health</a></li>
+            <li class="mt-2"><a href="#tratamientos" title="" class="opacity-75 hover:opacity-100">Consulta General</a></li>
+            <li class="mt-2"><a href="#tratamientos" title="" class="opacity-75 hover:opacity-100">Protesis Dentales</a></li>
+            <li class="mt-2"><a href="#tratamientos" title="" class="opacity-75 hover:opacity-100">Extracción Dentales</a></li>
           </ul>
         </div>
 
         <div class="w-full lg:w-2/6 mt-8 lg:mt-0 lg:mx-4 lg:pr-8">
-          <h5 class="uppercase tracking-wider font-semibold text-gray-500">Contact Details</h5>
+          <h5 class="uppercase tracking-wider font-semibold text-gray-500">Detalles de contacto</h5>
           <ul class="mt-4">
             <li>
               <a href="#" title="" class="block flex items-center opacity-75 hover:opacity-100">
@@ -477,7 +461,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
                   </svg>
                 </span>
                 <span class="ml-3">
-                  1985 Kerry Way, Whittier, CA, USA
+                  Guayacanes, Guayaquil, Ecuador
                 </span>
               </a>
             </li>
@@ -491,8 +475,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
                     <path d="M13 7L11 7 11 13 17 13 17 11 13 11z" /></svg>
                 </span>
                 <span class="ml-3">
-                  Mon - Fri: 9:00 - 19:00<br>
-                  Closed on Weekends
+                  Sab - Dom: 9:00 - 15:00<br>
                 </span>
               </a>
             </li>
@@ -510,25 +493,11 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
                 </span>
               </a>
             </li>
-            <li class="mt-4">
-              <a href="#" title="" class="block flex items-center opacity-75 hover:opacity-100">
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                    class="fill-current">
-                    <path
-                      d="M20,4H4C2.896,4,2,4.896,2,6v12c0,1.104,0.896,2,2,2h16c1.104,0,2-0.896,2-2V6C22,4.896,21.104,4,20,4z M20,8.7l-8,5.334 L4,8.7V6.297l8,5.333l8-5.333V8.7z" />
-                  </svg>
-                </span>
-                <span class="ml-3">
-                  dentalpro@example.com
-                </span>
-              </a>
-            </li>
           </ul>
         </div>
 
         <div class="w-full lg:w-1/6 mt-8 lg:mt-0 lg:mx-4">
-          <h5 class="uppercase tracking-wider font-semibold text-gray-500">We're Social</h5>
+          <h5 class="uppercase tracking-wider font-semibold text-gray-500">Nuestras Redes Sociales</h5>
           <ul class="mt-4 flex">
             <li>
               <a href="#" target="_blank" title="">
@@ -558,7 +527,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
             </li>
           </ul>
 
-          <p class="text-sm text-gray-400 mt-12">© 2018 ProDentists. <br class="hidden lg:block">All Rights Reserved.
+          <p class="text-sm text-gray-400 mt-12">© 2018 Saludent. <br class="hidden lg:block">All Rights Reserved.
           </p>
         </div>
       </div>
