--- a/public/index.html
+++ b/public/index.html
@@ -411,10 +411,17 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
       <div>
         <label for="message" class="block text-sm font-medium text-gray-700">Mensaje adicional</label>
         <textarea id="message" name="message" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-teal-500 focus:border-teal-500"></textarea>
-      </div>
-      <button type="submit" class="w-full bg-teal-500 hover:bg-teal-600 text-white font-bold py-4 px-6 rounded-lg shadow-md transition duration-300">
-        Continuar en WhatsApp
-      </button>
+      <!-- Estado y botón WhatsApp -->
+    <p id="estadoCita" class="text-center text-lg font-semibold mt-4"></p>
+    <a id="whatsappBtn" href="#" target="_blank"
+      class="hidden w-full block text-center bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg shadow-md transition duration-300 mt-2">
+      Confirmar por WhatsApp
+    </a>
+
+    <button type="submit"
+      class="w-full bg-teal-500 hover:bg-teal-600 text-white font-bold py-4 px-6 rounded-lg shadow-md transition duration-300">
+      Agendar cita
+    </button>
     </form>
   </div>
 </section>
@@ -539,7 +546,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
 
     gtag('config', 'UA-131505823-4');
   </script>
-
+  <script type="module" src="file.js"></script>
 </body>
 
 </html>
