--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link href="build/tailwind.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>DentalPro</title>
 
@@ -546,7 +546,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
 
     gtag('config', 'UA-131505823-4');
   </script>
-  <script type="module" src="file.js"></script>
+  <script type="module" src="./file.js"></script>
 </body>
 
 </html>
