--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <title>DentalPro</title>
+  <title>Saludent</title>
 
   <style>
     #menu-toggle:checked+#menu {
@@ -226,7 +226,7 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         
         <div class="w-full lg:w-1/2 lg:px-8 mt-12 lg:mt-0">
           <div> 
-          <img src="/public/images/Doctora Trabajando1.jpeg" alt="Foto perfil" 
+          <img src="images/Doctora Trabajando1.jpeg" alt="Foto perfil" 
           class="w-35 h-35 object-contain rounded-full object-cover mx-auto">
 
         </div>
@@ -357,6 +357,9 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
     <div class="text-center mb-12">
       <h2 class="text-4xl font-bold text-gray-800">Agenda tu <span class="text-teal-500">Cita</span></h2>
       <p class="text-lg text-gray-600 mt-4">¿Listo para transformar tu sonrisa? Completa el formulario y te contactaremos vía WhatsApp.</p>
+      <p class="text-center text-sm text-gray-600 mt-1">
+    *Disponibilidad solo los sábados y domingos.
+    </p>
     </div>
     <form id="contactForm" class="bg-white p-8 rounded-lg shadow-lg space-y-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -413,15 +416,17 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
         <textarea id="message" name="message" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-teal-500 focus:border-teal-500"></textarea>
       <!-- Estado y botón WhatsApp -->
     <p id="estadoCita" class="text-center text-lg font-semibold mt-4"></p>
+
     <a id="whatsappBtn" href="#" target="_blank"
-      class="hidden w-full block text-center bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg shadow-md transition duration-300 mt-2">
+      class="hidden w-[70%] mx-auto block text-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 mt-4 mb-4 text-base">
       Confirmar por WhatsApp
     </a>
 
     <button type="submit"
-      class="w-full bg-teal-500 hover:bg-teal-600 text-white font-bold py-4 px-6 rounded-lg shadow-md transition duration-300">
+      class="w-[70%] mx-auto block bg-teal-500 hover:bg-teal-600 text-white font-bold py-3 px-4 rounded-lg shadow-md transition duration-300">
       Agendar cita
     </button>
+
     </form>
   </div>
 </section>
@@ -440,8 +445,8 @@ Trabajo solo con cita previa para dedicar el tiempo necesario a cada paciente, s
     <footer class="relative bg-gray-900 text-white px-4 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 py-12 lg:py-24">
       <div class="flex flex-col md:flex-row">
         <div class="w-full lg:w-2/6 lg:mx-4 lg:pr-8">
-          <h3 class="font-bold text-2xl">Clinica Saludent</h3>
-          <p class="text-gray-400">Tu salud dental es prioridad. Agenda hoy mismo tu cita con la Dra. Martha Castro.</p>
+          <h3 class="font-bold text-2xl">Doctora Martha Castro</h3>
+          <p class="text-gray-400">Tu salud dental es prioridad. Agenda hoy mismo tu cita con nosotros.</p>
         </div>
 
         <div class="w-full lg:w-1/6 mt-8 lg:mt-0 lg:mx-4">
